Add tabs and file tree

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -58,6 +58,10 @@
         text-decoration: none;
       }
 
+      button {
+        cursor: pointer;
+      }
+
       /* Icon font */
 
       @font-face {
@@ -318,6 +322,13 @@
       .icon-xls:before { content: "\f1e9"; }
 
       .icon-more:before { content: "•••"; font-size: 90%; }
+
+      .color-icon {
+        display: inline-block;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 3px;
+      }
     </style>
   </head>
   <body>
