Start mocking up create project form

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -59,10 +59,18 @@
       }
 
       button {
+        background: transparent;
+        color: inherit;
         cursor: pointer;
       }
 
-      /* Icon font */
+      /* Utility classes */
+
+      .hidden {
+        display: none !important;
+      }
+
+      /* Icon font from https://icons8.com/c/windows-10-icons/ */
 
       @font-face {
         font-family: "icons8-win10";
