--- a/app/src/styles/mixins/misc.styl
+++ b/app/src/styles/mixins/misc.styl
@@ -1,37 +1,21 @@
-// Variables
-
-$border-radius-variants = {
-  sm: 0.2rem
+border-left-radius(size) {
+  border-radius: size 0 0 size
 }
 
-// Mixins
-
-radius(variant) {
-  border-radius: $border-radius-variants[variant]
+border-right-radius(size) {
+  border-radius: 0 size size 0
 }
 
-radius-left(variant) {
-  border-radius: $border-radius-variants[variant] 0 0 $border-radius-variants[variant]
-}
-
-radius-right(variant) {
-  border-radius: 0 $border-radius-variants[variant] $border-radius-variants[variant] 0
-}
-
-child-radius-horizontal(variant) {
+child-radius-horizontal(size) {
   > * {
     border-radius: 0
   }
 
   > *:first-child {
-    radius-left(variant)
+    border-left-radius: size
   }
 
   > *:last-child {
-    radius-right(variant)
+    border-right-radius: size
   }
-}
-
-cursor-pointer() {
-  cursor: pointer
 }
