Dedupe styles in output

--- a/app/src/styles/main.styl
+++ b/app/src/styles/main.styl
@@ -1,8 +1,4 @@
-@import 'variables'
-@import 'mixins/color'
-@import 'mixins/layout'
-@import 'mixins/misc'
-@import 'mixins/spacing'
+@import 'definitions'
 
 @import 'reset'
 @import 'elements'
