--- a/app/index.ejs
+++ b/app/index.ejs
@@ -5,7 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="main"></div>
     <!-- webpack builds are automatically injected -->
   </body>
 </html>
