Add icon colours

--- a/app/src/styles/variables.styl
+++ b/app/src/styles/variables.styl
@@ -1,4 +1,12 @@
-$brand-primary = #f50
+$blue = #2196F3
+$yellow = #FFCA28
+$red = #F44336
+$orange = #FF7043
+$green = #43A047
+$purple = #5C6BC0
+$teal = #26C6DA
+
+$brand-primary = $orange
 
 $background-default = #333
 $background-inverse = #eee
