Add icons for asset file types

--- a/app/src/styles/icons/file-types.styl
+++ b/app/src/styles/icons/file-types.styl
@@ -2,3 +2,23 @@
   @extend .icon-settings:before
   color: $teal
 }
+
+.file-icon-sprite:before {
+  @extend .icon-picture:before
+  color: $orange
+}
+
+.file-icon-font:before {
+  @extend .icon-generic-text:before
+  color: $orange
+}
+
+.file-icon-tilemap:before {
+  @extend .icon-insert-table:before
+  color: $orange
+}
+
+.file-icon-video:before {
+  @extend .icon-video-call:before
+  color: $orange
+}
