--- a/app/src/styles/icons/file-types.styl
+++ b/app/src/styles/icons/file-types.styl
@@ -13,7 +13,7 @@
   color: $orange
 }
 
-.file-icon-tilemap:before {
+.file-icon-tileset:before {
   @extend .icon-insert-table:before
   color: $orange
 }
