Start displaying things in the sprite editor

--- a/app/src/components/forms/common.styl
+++ b/app/src/components/forms/common.styl
@@ -11,8 +11,9 @@
 }
 
 .input-group .input {
-  border: 1px solid $color-muted
+  border: $input-border
   border-radius: $radius-sm
+  background: $background-darken
   child-radius-horizontal: $radius-sm
   spacing-horizontal: 0
 
@@ -24,6 +25,7 @@
   label {
     width: 4rem
     text-align: center
+    color: $color-muted
   }
 }
 
