--- a/app/src/styles/variables.styl
+++ b/app/src/styles/variables.styl
@@ -29,6 +29,7 @@ $gap-xs = 0.25rem
 $gap-sm = 0.5rem
 $gap-md = 0.75rem
 $gap-lg = 1rem
+$gap-xl = 1.5rem
 
 $radius-sm = 0.2rem
 
@@ -44,3 +45,6 @@ $bench-width-default = 20rem
 $folder-contents-gap = 1.25rem
 
 $tab-width = 10rem
+
+$label-color = #ccc
+$input-border = 1px solid #666
