Add concept of extra UI elements, plus list box component

--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -591,3 +591,13 @@ $collapse-header-size = 13px
 $collapse-content-fill = $color-dark-white
 $collapse-content-size = 13px
 $collapse-content-color = $color-base-black
+
+// Element Extras
+
+// ListBox
+$list-box-fill = $button-default-fill
+$list-box-padding = $gap-sm
+$list-box-border-radius = $radius-sm
+$list-box-item-color = $button-default-color
+$list-box-item-padding = $gap-sm
+$list-box-item-border-radius = $radius-sm
