--- a/app/styles/element-theme-default/breadcrumb.styl
+++ b/app/styles/element-theme-default/breadcrumb.styl
@@ -16,7 +16,7 @@
       &__inner {
         &, & a {
           transition: color .15s linear
-          color:$color-extra-light-black
+          color:$fill-lighten
 
           &:hover {
             color: $color-primary
