--- a/app/styles/element-theme-default/dialog.styl
+++ b/app/styles/element-theme-default/dialog.styl
@@ -58,7 +58,7 @@
 
     &__body {
       padding: 30px 20px
-      color: $color-extra-light-black
+      color: $fill-lighten
       font-size: $dialog-font-size
     }
 
