--- a/app/styles/element-theme-default/dropdown.styl
+++ b/app/styles/element-theme-default/dropdown.styl
@@ -4,7 +4,7 @@
   &dropdown {
     display: inline-block
     position: relative
-    color: $color-extra-light-black
+    color: $fill-lighten
     font-size: $font-size-base
 
     .el-button-group {
