--- a/app/styles/element-theme-default/form.styl
+++ b/app/styles/element-theme-default/form.styl
@@ -38,7 +38,7 @@
       vertical-align: middle
       float: left
       font-size: 14px
-      color: $color-extra-light-black
+      color: $fill-lighten
       line-height: 1
       padding: 11px 12px 11px 0
       box-sizing: border-box
