--- a/app/styles/element-theme-default/progress.styl
+++ b/app/styles/element-theme-default/progress.styl
@@ -6,7 +6,7 @@
 
     &__text {
       font-size:14px
-      color:$color-extra-light-black
+      color:$fill-lighten
       display: inline-block
       vertical-align: middle
       margin-left: 10px
