--- a/app/styles/element-theme-default/step.styl
+++ b/app/styles/element-theme-default/step.styl
@@ -150,7 +150,7 @@
 
       &.is-process {
         font-weight: 700
-        color: $color-extra-light-black
+        color: $fill-lighten
       }
 
       &.is-wait {
