--- a/app/styles/element-theme-default/table.styl
+++ b/app/styles/element-theme-default/table.styl
@@ -319,11 +319,11 @@
     }
 
     & .ascending .sort-caret.ascending {
-      border-bottom-color: $color-extra-light-black
+      border-bottom-color: $fill-lighten
     }
 
     & .descending .sort-caret.descending {
-      border-top-color: $color-extra-light-black
+      border-top-color: $fill-lighten
     }
 
     & th.gutter, td.gutter {
