--- a/app/styles/element-theme-default/upload.styl
+++ b/app/styles/element-theme-default/upload.styl
@@ -28,7 +28,7 @@
     &__file {
       transition: all .5s cubic-bezier(.55,0,.1,1)
       font-size: 14px
-      color: $color-extra-light-black
+      color: $fill-lighten
       line-height: 32px
       position: relative
       box-sizing: border-box
@@ -37,7 +37,7 @@
       position: relative
 
       a {
-        color: $color-extra-light-black
+        color: $fill-lighten
         display: block
         margin-right: 40px
         overflow: hidden
@@ -231,7 +231,7 @@
         margin: 0
         line-height: 36px
         font-size: 14px
-        color: $color-extra-light-black
+        color: $fill-lighten
       }
 
       & + .el-upload__inner {
