--- a/app/styles/icons/file-types.styl
+++ b/app/styles/icons/file-types.styl
@@ -5,20 +5,20 @@
 
 .file-icon-sprite:before {
   @extend .icon-picture:before
-  color: $orange
+  color: $color-primary
 }
 
 .file-icon-font:before {
   @extend .icon-generic-text:before
-  color: $orange
+  color: $color-primary
 }
 
 .file-icon-tileset:before {
   @extend .icon-insert-table:before
-  color: $orange
+  color: $color-primary
 }
 
 .file-icon-video:before {
   @extend .icon-video-call:before
-  color: $orange
+  color: $color-primary
 }
