--- a/app/styles/element-theme-default/autocomplete.styl
+++ b/app/styles/element-theme-default/autocomplete.styl
@@ -27,7 +27,7 @@
         padding: 0 10px
         margin: 0
         cursor: pointer
-        color: $color-extra-light-black
+        color: $fill-lighten
         font-size: 14px
         white-space: nowrap
         overflow: hidden
