--- a/app/styles/element-theme-default/menu.styl
+++ b/app/styles/element-theme-default/menu.styl
@@ -34,7 +34,7 @@ menu-item() {
         color: $color-extra-light-silver
 
         &:hover {
-          background-color: $color-extra-light-black
+          background-color: $fill-lighten
         }
       }
       
@@ -42,7 +42,7 @@ menu-item() {
         background-color: $color-base-black
 
         & .el-menu-item:hover {
-          background-color: $color-extra-light-black
+          background-color: $fill-lighten
         }
       }
     }
@@ -123,7 +123,7 @@ menu-item() {
         & .el-submenu {
           .el-menu-item,
           .el-submenu-title {
-            color: $color-extra-light-black
+            color: $fill-lighten
 
             &:hover {
               background-color: $color-base-gray
