Style recent projects page nicely with Element

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -8,4 +8,5 @@
 @import 'icons/top-level-items'
 
 @import 'element-theme-default/index'
+@import 'element-overrides/button'
 @import 'element-extras/list-box'
