--- a/app/styles/element-overrides/button.styl
+++ b/app/styles/element-overrides/button.styl
@@ -1,8 +1,4 @@
-.el- {
-  &button {
-    &:hover,
-    &:focus {
-      color: lighten($button-default-color, 10%)
-    }
-  }
+.el-button:hover,
+.el-button:focus {
+  color: lighten($button-default-color, 10%)
 }
