--- a/app/styles/element-theme-default/badge.styl
+++ b/app/styles/element-theme-default/badge.styl
@@ -19,7 +19,7 @@
       border: 1px solid $color-white
 
       &.is-fixed {
-        absolute: top 0 left ($badge-size / 2 + 1)
+        absolute: top 0 right ($badge-size / 2 + 1)
         transform: translateY(-50%) translateX(100%)
 
         &.is-dot {
