--- a/app/styles/element-theme-default/message.styl
+++ b/app/styles/element-theme-default/message.styl
@@ -49,7 +49,7 @@
     }
 
     &__closeBtn {
-      absolute: top 3px left 0
+      absolute: top 3px right 0
       cursor: pointer
       color: $message-close-color
       font-size: $font-size-base
