--- a/app/styles/elements.styl
+++ b/app/styles/elements.styl
@@ -20,28 +20,8 @@ a {
 }
 
 label {
-  color: lighten($font-color-base, 10%)
-}
-
-button {
-  padding: $gap-small $gap-large
-  border-radius: $border-radius-base
-  stateful-background: $fill-lighten
-  color: $font-color-base
-  cursor: pointer
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="number"],
-input[type="url"],
-input[type="tel"] {
-  padding: $gap-small
-  border-radius: $border-radius-base
-  font-weight: $font-weight-medium
-  background: $fill-darken
-  color: $font-color-base
+  color: $color-base-silver
+  // color: lighten($font-color-base, 10%)
 }
 
 .hidden {
