--- a/app/styles/element-theme-default/alert.styl
+++ b/app/styles/element-theme-default/alert.styl
@@ -66,7 +66,7 @@
       font-size: $alert-close-font-size
       color: $color-white
       opacity: 1
-      absolute: top 12px left 15px
+      absolute: top 12px right 15px
       cursor: pointer
 
       &.is-customed {
