--- a/app/styles/element-theme-default/dialog.styl
+++ b/app/styles/element-theme-default/dialog.styl
@@ -31,7 +31,7 @@
     }
 
     &__wrapper {
-      fixed: top 0 left 0 bottom 0 right 0
+      fixed: top 0 right 0 bottom 0 left 0
       overflow: auto
       margin: 0
     }
