--- a/app/styles/element-theme-default/notification.styl
+++ b/app/styles/element-theme-default/notification.styl
@@ -43,7 +43,7 @@
     }
 
     &__closeBtn {
-      absolute: top 20px left 20px
+      absolute: top 20px right 20px
       cursor: pointer
       color: $notification-close-color
       font-size: $notification-font-size
