--- a/app/styles/element-theme-default/switch.styl
+++ b/app/styles/element-theme-default/switch.styl
@@ -68,7 +68,7 @@
       transition: border-color .3s, background-color .3s
 
       & .el-switch__button {
-        absolute: top 0 right 0
+        absolute: top 0 left 0
         border-radius: $border-radius-circle
         transition: transform .3s
         size: $switch-button-size
