--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -7,6 +7,11 @@
 @import 'icons/file-types'
 @import 'icons/top-level-items'
 
+@import 'element-theme-helpers'
 @import 'element-theme-default/index'
+@import 'element-overrides/alerts'
 @import 'element-overrides/button'
+@import 'element-overrides/icons'
+@import 'element-overrides/input'
 @import 'element-extras/list-box'
+@import 'element-extras/label'
