--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -15,3 +15,4 @@
 @import 'element-overrides/input'
 @import 'element-extras/list-box'
 @import 'element-extras/label'
+@import 'element-extras/multi-input'
