--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -8,6 +8,12 @@
 @import 'icons/top-level-items'
 
 @import 'element-theme-helpers'
+
+@import 'element/alerts'
+@import 'element/button'
+@import 'element/input-number'
+@import 'element/input'
+
 @import 'element-theme-default/index'
 @import 'element-overrides/alerts'
 @import 'element-overrides/button'
